- Allows EvidenceCard to render w/out variant or disease specified, adds props to remove chrome when rendering embedded on, e.g., the curation dashboard. - Makes column headers non-wrapping on EvidenceCard, AnnotateVariant text mining tables. - Fixes lots of little issues in VariomesLitPopover where the popup would persist despite not being activate by a hover-over. - Temporarily hides all review-related panels in CurationDashboard, adds EvidenceCard with (WIP) curation entry overview for the current user.

--- a/svip-o-vue/src/css/main.css
+++ b/svip-o-vue/src/css/main.css
@@ -175,6 +175,10 @@ footer .version-info .feedback {
     font-style: italic;
 }
 
+.unwrappable-header th {
+    white-space: nowrap;
+}
+
 /* styles for tables with toggleable details trays */
 .details-tray {
     display: flex;
